feat: implement 3xx responses
